--- a/_config.yml
+++ b/_config.yml
@@ -181,7 +181,7 @@ sass:
 permalink: /:categories/:title/
 paginate: 8 # amount of posts to show
 paginate_path: /page:num/
-timezone: "America/New_York" # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: "Asia/Rangoon" # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
@@ -223,7 +223,7 @@ tag_archive:
   path: /tags/
 resource_tag_archive:
   type: liquid
-  path: /resources/tag/
+  path: /courses/tag/
 tool_tag_archive:
   type: liquid
   path: /tools/tag/
@@ -250,7 +250,7 @@ compress_html:
 
 # Collections
 collections:
-  resources:
+  courses:
     output: true
     permalink: /:collection/:path/
   tools:
@@ -280,9 +280,9 @@ defaults:
   # _resources
   - scope:
       path: ""
-      type: resources
+      type: courses
     values:
-      layout: single-resource
+      layout: single-course
       read_time: false
       author_profile: false
       share: true
