--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,75 +1,72 @@
 # Main navigation
 main:
-  - title: "About"
-    url: /about/
   - title: "Courses"
-    url: /resources/
+    url: /courses/
   - title: "Tutorials"
-    url: /learn/
+    url: /tutorials/
   - title: "Blog"
     url: https://alexsnow348.github.io/
-
-  # - title: "Teach"
-  #   url: /teach/
+  - title: "About"
+    url: /about/
 
 
 # Resource navigation menus
 
 maintaining-exteriors:
   - title: Getting Started
-    url: /resources/maintaining-exteriors/#getting-started
+    url: /courses/maintaining-exteriors/#getting-started
   - title: Maintenance
-    url: /resources/maintaining-exteriors/#maintenance-plans-schedules-and-inspections
+    url: /courses/maintaining-exteriors/#maintenance-plans-schedules-and-inspections
     children:
       - title: Creating a plan
-        url: /resources/maintaining-exteriors/#creating-a-maintenance-plan
+        url: /courses/maintaining-exteriors/#creating-a-maintenance-plan
       - title: Scheduling maintenance
-        url: /resources/maintaining-exteriors/#scheduling-maintenance-work
+        url: /courses/maintaining-exteriors/#scheduling-maintenance-work
       - title: Inspecting exteriors
-        url: /resources/maintaining-exteriors/#inspecting-building-exteriors
+        url: /courses/maintaining-exteriors/#inspecting-building-exteriors
   - title: Building Components
-    url: /resources/maintaining-exteriors/#building-components
+    url: /courses/maintaining-exteriors/#building-components
     children:
       - title: Roofs/Chimneys
-        url: /resources/maintaining-exteriors/#roofschimneys
+        url: /courses/maintaining-exteriors/#roofschimneys
       - title: Exterior Walls
-        url: /resources/maintaining-exteriors/#exterior-walls
+        url: /courses/maintaining-exteriors/#exterior-walls
       - title: Openings
-        url: /resources/maintaining-exteriors/#openings
+        url: /courses/maintaining-exteriors/#openings
       - title: Projections
-        url: /resources/maintaining-exteriors/#projections
+        url: /courses/maintaining-exteriors/#projections
       - title: Foundations and Perimeter Grades
-        url: /resources/maintaining-exteriors/#foundations-and-perimeter-grades
+        url: /courses/maintaining-exteriors/#foundations-and-perimeter-grades
   - title: Additional Considerations
-    url: /resources/maintaining-exteriors/#additional-considerations
+    url: /courses/maintaining-exteriors/#additional-considerations
     children:
       - title: Cautions
-        url: /resources/maintaining-exteriors/#cautions-during-maintenance-work
+        url: /courses/maintaining-exteriors/#cautions-during-maintenance-work
       - title: Sealants and Caulks
-        url: /resources/maintaining-exteriors/#sealants-and-caulks
+        url: /courses/maintaining-exteriors/#sealants-and-caulks
       - title: Contracting
-        url: /resources/maintaining-exteriors/#contracting-maintenance-and-repair-work
+        url: /courses/maintaining-exteriors/#contracting-maintenance-and-repair-work
   - title: Summary
-    url: /resources/maintaining-exteriors/#summary
+    url: /courses/maintaining-exteriors/#summary
   - title: Reading List
-    url: /resources/maintaining-exteriors/#reading-list
+    url: /courses/maintaining-exteriors/#reading-list
 
 architectural-investigation:
   - title: Determining the Purpose of Investigation
-    url: /resources/architectural-investigation/#determining-the-purpose-of-investigation
+    url: /courses/architectural-investigation/#determining-the-purpose-of-investigation
   - title: Investigators and Investigative Skills
-    url: /resources/architectural-investigation/#investigators-and-investigative-skills
+    url: /courses/architectural-investigation/#investigators-and-investigative-skills
   - title: Studying the Fabric
-    url: /resources/architectural-investigation/#architectural-evidence-studying-the-fabric-of-the-historic-building
+    url: /courses/architectural-investigation/#architectural-evidence-studying-the-fabric-of-the-historic-building
   - title: Historic Building Materials and Features
-    url: /resources/architectural-investigation/#looking-more-closely-at-historic-building-materials-and-features
+    url: /courses/architectural-investigation/#looking-more-closely-at-historic-building-materials-and-features
   - title: Conducting the Architectural Investigation
-    url: /resources/architectural-investigation/#conducting-the-architectural-investigation
+    url: /courses/architectural-investigation/#conducting-the-architectural-investigation
   - title: Weighing the Evidence
-    url: /resources/architectural-investigation/#after-architectural-investigation-weighing-the-evidence
+    url: /courses/architectural-investigation/#after-architectural-investigation-weighing-the-evidence
   - title: Keeping a Responsible Record
-    url: /resources/architectural-investigation/#keeping-a-responsible-record-for-future-investigators
+    url: /courses/architectural-investigation/#keeping-a-responsible-record-for-future-investigators
   - title: Summary
-    url: /resources/architectural-investigation/#summary
+    url: /courses/architectural-investigation/#summary
   - title: Reading List
-    url: /resources/architectural-investigation/#reading-list
+    url: /courses/architectural-investigation/#reading-list
