--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,8 +5,10 @@ main:
   - title: "Tutorials"
     url: /tutorials/
   - title: "Blog"
-    url: https://alexsnow348.github.io/
-  - title: "About"
+    url: https://alexsnow348.github.io/blog/
+  - title: "Podcast"
+    url: https://anchor.fm/alexsnowschool/ 
+  - title: "Donate"
     url: /about/
 
 
