--- a/assets/images/manifest.json
+++ b/assets/images/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "Local Preservation School",
+	"name": "Alex Snow School",
 	"icons": [
 		{
 			"src": "\/images\/android-chrome-192x192.png",
