--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -1,25 +1,25 @@
 # List of topics
 
-- name: History
-  slug: history
+- name: Machine-Learning-and-AI
+  slug: ml-ai
   description: "Historical research and interpretation. Architectural and social history."
 
-- name: Community
-  slug: community
+- name: Data-Engineering
+  slug: data-engineering
   description: "Working with groups of people and organizations for outreach and education."
 
-- name: Advocacy
-  slug: advocacy
+- name: Economics
+  slug: economics
   description: "How to push for change at the local, state, and national level."
 
-- name: Planning
-  slug: planning
+- name: Finance
+  slug: finance
   description: "Navigating issues of land use, historic designation, development, urban design and planning."
 
-- name: Design
-  slug: design
+- name: Blockchain
+  slug: blockchain
   description: "Architecture, engineering, landscape design, site planning, etc."
 
-- name: Education
-  slug: education
+- name: Web3
+  slug: web3
   description: "Teaching preservation and related skills in informal and formal educational contexts."
