added target blank for links

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,6 @@ main:
   - title: "Podcast"
     url: https://anchor.fm/alexsnowschool/ 
   - title: "Donate"
-    url: /about/
+    url: /donate/
 
 
