--- a/_data/topics.yml
+++ b/_data/topics.yml
@@ -15,9 +15,9 @@
   display_name: "Economics"
   description: "Economics ဆိုင်ရာ သင်ခန်စားများ ဖြစ်ပါတယ်။"
 
-- name: Finance
-  slug: finance
-  display_name: Finance
+- name: Finance-and-Banking
+  slug: finance-banking
+  display_name: Finance and Banking
   description: "Finance နဲ့ ဆိုင်တာတွေကို စုထားပါတယ်။"
 
 - name: "Project-Management"
