changed podcasts link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
     url: https://alexsnow348.github.io/blog/
     target: "_blank"
   - title: "Podcast"
-    url: https://anchor.fm/alexsnowschool/ 
+    url: https://alexsnow348.github.io/podcasts/
     target: "_blank"
   - title: "Donate"
     url: /donate/
