changed podcasts link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   - title: "Blog"
     url: https://alexsnow348.github.io/blog/
     target: "_blank"
-  - title: "Podcast"
+  - title: "Podcasts"
     url: https://alexsnow348.github.io/podcasts/
     target: "_blank"
   - title: "Donate"
