--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,6 @@ main:
   - title: "Portfolio"
     url: /portfolio/
   - title: "Donate"
-    url: https://buy.stripe.com/dR67vG7Hz0dSeuQ3cc
+    url: https://buy.stripe.com/28odU4ge58Ko0E04gh
     target: "_blank"
 
