updated the podcasts link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: https://github.com/alexsnowschool
     target: "_blank"
   - title: "Podcasts"
-    url: https://alexsnow348.github.io/podcasts/
+    url: https://podcasters.spotify.com/pod/show/alexsnowschool
     target: "_blank"
   - title: "Newsletter"
     url: https://alexsnowschool.substack.com/
