updated the podcasts link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Lab"
     url: https://github.com/alexsnowschool
     target: "_blank"
-  - title: "Podcasts"
+  - title: "Podcast"
     url: https://podcasters.spotify.com/pod/show/alexsnowschool
     target: "_blank"
   - title: "Newsletter"
