--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Newsletter"
     url: https://alexsnowschool.substack.com/
     target: "_blank"
-  - title: "Donate"
-    url: /donate/
+  - title: "Consultation"
+    url: /consultation/
     # target: "_blank"
 
